...
    fun generateBaselineProfile() {
        baselineProfileRule.collect(
            packageName = BenchmarkConfig.PackageName,
        ) {
            pressHome()
            startActivityAndWait()
            waitForDescription("Dashboard navigation destination")

            findByDescription("Transactions navigation destination").click()
            waitForDescription("Transactions navigation destination")

            findByDescription("Search navigation destination").click()
            waitForDescription("Search transactions by keyword")

            findByDescription("Settings navigation destination").click()
            waitForText("Security")
        }
    }
}

